remaining cloud service apis and tests
